objects/BMCServiceDesk__Incident_CI_Link__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data linking between incidents and configuration items.</description>
    <fields>
        <fullName>BMCServiceDesk__Class_Name__c</fullName>
        <description>This field stores the class name of the linked configuration item</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Configuration_Item__c</fullName>
        <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__CMDBManager?id=1010&amp;cmdbRecordId=&quot;+ BMCServiceDesk__FKConfiguration_Item__r.Id ,  BMCServiceDesk__FKConfiguration_Item__r.Name , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configuration Item~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKConfiguration_Item__c</fullName>
        <description>This field stores the foreign key value of the linked configuration item</description>
        <label>Configuration Item</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Incident CI Links</relationshipLabel>
        <relationshipName>Incident_CI_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <description>This field stores the foreign key value of the linked incident</description>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Linked Configuration Items</relationshipLabel>
        <relationshipName>Incident_CI_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_ID__c</fullName>
        <description>This field stores the instance id of the linked configuration item</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__InstanceID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_Name__c</fullName>
        <description>This field stores the instance name of the linked configuration item</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance Name</label>
        <type>Text</type>
    </fields>
    <label>Incident CI Link</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__FKIncident__c</columns>
        <columns>BMCServiceDesk__FKConfiguration_Item__c</columns>
        <columns>BMCServiceDesk__Instance_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident CI Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>